# autotrader-scraper

./: README.md  pyproject.toml
.github/workflows/: scrape_data.yaml
autotrader_scraper/: scrape.py
data/: honda_cr-v_2024-08-12.csv  honda_cr-v_2024-08-13.csv  honda_cr-v_2024-08-15.csv  honda_cr-v_2024-08-16.csv  honda_cr-v_2024-08-17.csv  honda_cr-v_2024-08-18.csv  honda_cr-v_2024-08-19.csv  honda_cr-v_2024-08-20.csv  honda_cr-v_2024-08-21.csv  honda_cr-v_2024-08-22.csv  honda_cr-v_2024-08-24.csv  honda_cr-v_2024-08-25.csv  honda_cr-v_2024-08-26.csv  honda_cr-v_2024-08-27.csv  honda_cr-v_2024-08-28.csv  honda_cr-v_2024-08-29.csv  honda_cr-v_2024-08-30.csv  honda_cr-v_2024-08-31.csv  honda_cr-v_2024-09-01.csv  honda_cr-v_2024-09-02.csv  honda_cr-v_2024-09-03.csv  honda_cr-v_2024-09-04.csv  honda_cr-v_2024-09-05.csv  honda_cr-v_2024-09-07.csv  honda_cr-v_2024-09-08.csv  honda_cr-v_2024-09-09.csv  honda_cr-v_2024-09-10.csv  honda_cr-v_2024-09-11.csv  honda_cr-v_2024-09-12.csv  honda_cr-v_2024-09-13.csv  honda_cr-v_2024-09-14.csv  honda_cr-v_2024-09-15.csv  honda_cr-v_2024-09-16.csv  honda_cr-v_2024-09-18.csv  honda_cr-v_2024-09-19.csv  honda_cr-v_2024-09-20.csv  honda_cr-v_2024-09-21.csv  honda_cr-v_2024-09-22.csv  honda_cr-v_2024-09-23.csv  honda_cr-v_2024-09-24.csv  (+120 more)
