[tool.poetry]
name = "autotrader-scraper"
version = "0.1.0"
description = "Scraper for autotrader.ca"
authors = ["taylordunn <t.dunn19@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
ipython = "^8.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
